--- a/www/index.html
+++ b/www/index.html
@@ -4,6 +4,7 @@
 		<meta charset="utf-8">
 		<title>鲸鱼工作室-首页 </title>
 		<link href="imgs/logo.ico" rel="shortcut icon">
+		<link href="css/nb.css" rel="stylesheet" type="text/css">
 	</head>
 	<body>
 		<script type="text/javascript" src="javaScript/egg.js" hidden="hidden">document.write('这一段永远也显示不出来，是不是很神奇？')</script>
@@ -13,7 +14,7 @@
 				document.write('此网站不支持IE，请选用其他浏览器 <a href=https://www.google.cn/chrome/>推荐使用chrome浏览器 点此跳转</a>')
 			}
 		</script>
-		<div id="mr-cont-0" style="color:#000000">
+		<div id="mr-cont-0" class='nb'>
 			<h3>
 				<img src='imgs/logo.png' width='70' height="50">
 				<a href='index.html'>首页</a>
